--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,11 @@
 @import "tailwindcss";
 
+/* Used to add custom styles that are not covered by Tailwind */
+@import './custom.css';
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #000000;
+  --foreground: #ededed;
 }
 
 @theme inline {
@@ -22,5 +25,13 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Figtree", "Figtree Fallback";
+}
+@layer components {
+  .get-started-btn {
+    @apply bg-[#FC004E] text-white rounded w-full h-[40px] uppercase
+  }
+  .top-bar{
+    @apply w-full bg-gradient-to-r from-[#FC004E] via-[#A34C85] to-[#10CBE0] text-white
+  }
 }
